--- a/public/test2.html
+++ b/public/test2.html
@@ -6,17 +6,32 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="root"></div>
     <script type="importmap">
       {
         "imports": {
-          "react": "https://esm.sh/react@19"
+          "react": "https://esm.sh/react@19",
+          "react-dom": "https://esm.sh/react-dom@19.1.0",
+          "react-dom/client": "https://esm.sh/react-dom@19.1.0/client"
         }
       }
     </script>
     <script type="module">
       import React from "react";
+      import ReactDOM from "react-dom/client";
 
-      console.log(React);
+      const App = () => {
+        return React.createElement(
+          "div",
+          {
+            style: { color: "red" },
+          },
+          "This is a App Component"
+        );
+      };
+
+      const root = document.getElementById("root");
+      ReactDOM.createRoot(root).render(React.createElement(App, null));
     </script>
   </body>
 </html>
