--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://cdn.bootcdn.net/ajax/libs/typescript/5.8.2/typescript.min.js"></script>
   </body>
 </html>
