--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://cdn.bootcdn.net/ajax/libs/typescript/5.8.2/typescript.min.js"></script>
+    <script src="https://fastly.jsdelivr.net/npm/typescript@5.8.3/lib/typescript.min.js"></script>
   </body>
 </html>
